# spody

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  add_license_header.ps1
.github/workflows/: ci.yml  release.yml
docs/: RELEASES.md  developer-guide.md
docs/user-manual/: .gitignore  README.md  build_pdf.py  style.css
docs/user-manual/source/: 01-introduction.md  02-installation.md  03-setup-wizard.md  04-main-window.md  05-toml-form.md  06-toml-schema.md  07-batch.md  08-analysis-tab.md  09-plot-catalog.md  10-frames.md  11-diff-validation.md  12-cli.md  13-troubleshooting.md  14-glossary.md
examples/: README.md
examples/batch_demo/: README.md  cases.csv  input.toml
examples/cr3bp_em_l4/: input.toml
examples/debris_demo/: README.md  cases.csv  input.toml
examples/debris_impact_demo/: .gitignore  README.md  cases_impact.csv  input.toml
examples/debris_ric_demo/: .gitignore  README.md  cases_ric.csv  input.toml
examples/glonass_r03_validation/: input.toml
examples/gps_g11_validation/: input.toml
examples/iss_drag_calibration/: ISS_OEM_2024-07-03.txt  input.toml
examples/lro_6day/: README.md  input.toml
python/: .gitignore  README.md  build_bundle.py  build_exe.ps1  pyproject.toml  run_spody_gui.py  spody_gui.spec
python/spody_gui/: __init__.py  __main__.py  about_dialog.py  analysis_panel.py  animation_bar.py  assets.py  astronomy.py  central_bodies.py  completer.py  constants.py  editor.py  frames.py  main.py  main_window.py  paths.py  plot_options.py  rerun_panel.py  runner.py  scene_options.py  schema.py  settings.py  setup_wizard.py  terminal.py  time_conv.py  toml_form.py  toml_io.py  vtk_canvas.py
python/spody_gui/analysis/: __init__.py  altitude_bands.py  context.py  info.py  overlays.py  plots_accel.py  plots_cr3bp.py  plots_diff.py  plots_events.py  plots_traj.py  registry.py  scene3d.py  spec.py  table_model.py
python/spody_gui/form/: __init__.py  catalog.py  cr3bp_convert.py  handlers.py  roundtrip.py  sections.py  visibility.py  widgets.py
python/spody_io/: __init__.py  accel.py  events.py  headers.py  traj.py
python/spopy/: __init__.py  cr3bp.py  earth_orientation.py  eop.py  ephemeris.py  kepler.py  rotations.py  time.py
python/spoviz/: README.md  __init__.py  bodies.py  decoration.py  qt.py  scene.py  textures.py  widgets.py
src/: app_diagnostics.c  app_diagnostics.h  app_io.c  app_io.h  atmosphere_nrlmsise00.c  atmosphere_nrlmsise00.h  calibrate.c  calibrate.h  central_body.c  central_body.h  dynamics_model.c  dynamics_model.h  main.c  sim_run.c  sim_run.h  sim_setup.c  sim_setup.h  toml_input.c  toml_input.h
tests/: README.md
