[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spody_python"
version = "0.1.0"
description = "Desktop GUI + binary readers for the spody propagator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Valerio (@ValeEng)" }]

# Two packages live here:
#   spody_io   -- standalone NumPy-based readers for the spody output
#                 binaries; reusable from notebooks / scripts.
#   spody_gui  -- the PySide6 desktop application that wraps the spody
#                 binary and (soon) embeds viewers built on spody_io.
dependencies = [
    "PySide6    >= 6.5, < 7",
    "numpy      >= 1.20",
    "matplotlib >= 3.5",   # Qt6 (QtAgg) backend lives here
]

[project.optional-dependencies]
dev = [
    "pyinstaller >= 6.0",
]

[project.scripts]
spody-gui = "spody_gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spody_gui*", "spody_io*"]
