[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spody_python"
version = "0.3.0b0"   # semver "0.3.0-beta" in PEP 440 syntax
description = "Desktop GUI + binary readers for the spody propagator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Valerio (@ValeEng)" }]

# Four packages live here:
#   spody_io   -- standalone NumPy-based readers for the spody output
#                 binaries; reusable from notebooks / scripts.
#   spopy      -- pure-Python re-implementation of spody-core's read-
#                 side helpers (DE440 ephemeris + ICRF<->Moon PA
#                 rotations) that the GUI needs at interactive speed
#                 without spawning subprocesses or loading a shared lib.
#   spoviz     -- the 3D astrodynamics visualization library (VTK +
#                 numpy scene engine, Cesium-like time-dynamic scenes;
#                 Qt host widget in spoviz.qt only).
#   spody_gui  -- the PySide6 desktop application that wraps the spody
#                 binary and embeds viewers built on spody_io + spopy
#                 + spoviz.
dependencies = [
    "PySide6    >= 6.5, < 7",
    "numpy      >= 1.20",
    "matplotlib >= 3.5",   # QtAgg backend for embedded 2D plots
    "vtk        >= 9.2",   # 3D scene (QVTKRenderWindowInteractor)
    "tomli      >= 2.0",   # TOML reader (becomes stdlib tomllib in 3.11+)
    # SOFA (Standards Of Fundamental Astronomy) Python wrapper, ~350 kB
    # compiled C wheel. Used by spopy.icrf_to_itrs for the IAU 2006/2010
    # Earth orientation chain (X, Y, s series, ERA, polar motion). The
    # GUI's Earth-centered 3D scene needs this for the ITRF triad and
    # the textured globe rotation.
    "pyerfa     >= 2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller >= 6.0",
    # User-manual build pipeline (docs/user-manual/build_pdf.py).
    # build_bundle.py auto-runs the manual builder, so a dev install
    # needs these to ship the PDF inside the bundle.
    "markdown >= 3.4",
    "pygments >= 2.15",
]

[project.scripts]
spody-gui = "spody_gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spody_gui*", "spody_io*", "spopy*", "spoviz*"]
